fix shaking and spacing

--- a/UIKit/style.css
+++ b/UIKit/style.css
@@ -32,7 +32,7 @@
     margin: 5px;
 }
 .UIKitText {
-    margin: 5px;
+    margin: 5px 30px;
 }
 .UIKitInput {
     width: 80%;
